more conversions for unicode work in addition to updating the sconscripts to use cxx files instead of cpp.

--- a/VE_Builder/Transient_Tools/Star_Moving_Mesh/SConscript
+++ b/VE_Builder/Transient_Tools/Star_Moving_Mesh/SConscript
@@ -4,8 +4,8 @@ pj = os.path.join
 Import('baseEnv')
 
 sources = Split("""
-   main.cpp
-   transient.cpp
+   main.cxx
+   transient.cxx
 """)
 env = baseEnv.Copy()
 env.Append(CPPPATH = [os.getcwd()])
