--- a/VE_CE/SConscript
+++ b/VE_CE/SConscript
@@ -5,9 +5,9 @@ pj = os.path.join
 Import('ves_pkg LIBDIR PREFIX buildDir xerces_options')
 
 srcs = Split("""
-   Exe_server.cpp 
-   Executive_i.cpp 
-   Execute_Thread.cpp
+   Exe_server.cxx 
+   Executive_i.cxx 
+   Execute_Thread.cxx
    QueryThread.cxx
 """)
 
