--- a/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
@@ -5,10 +5,10 @@ pj = os.path.join
 Import('baseEnv ves_pkg LIBDIR GetPlatform vtk_options buildDir wxwidgets_options PREFIX')
 
 srcs = Split("""
-   flowTexture.cpp 
-   tcApp.cpp
-   tcFrame.cpp 
-   textureCreator.cpp
+   flowTexture.cxx 
+   tcApp.cxx
+   tcFrame.cxx 
+   textureCreator.cxx
 """)
 ##srcs = map(lambda s: pj('#', 'VE_Builder', 'vtkTo3DTexture', 'tcGUI', s), srcs)
 
