--- a/VE_Conductor/GUIPlugin/SConscript
+++ b/VE_Conductor/GUIPlugin/SConscript
@@ -5,26 +5,25 @@ pj = os.path.join
 Import('baseEnv ves_pkg LIBDIR buildDir xerces_options wxwidgets_options')
 
 sources = Split("""
-   FinancialDialog.cpp 
-   ListTable.cpp 
-   Plugin_base.cpp 
-   GlobalParamDialog.cpp 
-   Geometry.cpp 
-   GeometryDialog.cpp 
-   GeometryDataManager.cpp 
-   PortDialog.cpp 
-   ResultPanel.cpp 
-   StringParse.cpp 
-   SummaryResultDialog.cpp 
+   FinancialDialog.cxx 
+   ListTable.cxx 
+   Plugin_base.cxx 
+   GlobalParamDialog.cxx 
+   Geometry.cxx 
+   GeometryDataManager.cxx 
+   PortDialog.cxx 
+   ResultPanel.cxx 
+   StringParse.cxx 
+   SummaryResultDialog.cxx 
    CORBAServiceList.cxx
    OrbThread.cxx 
-   TexTable.cpp 
-   TextResultDialog.cpp 
-   UIDialog.cpp 
+   TexTable.cxx 
+   TextResultDialog.cxx 
+   UIDialog.cxx 
    UI_i.cxx
-   ParamsDlg.cpp
-   QueryInputsDlg.cpp
-   FindDialog.cpp
+   ParamsDlg.cxx
+   QueryInputsDlg.cxx
+   FindDialog.cxx
 """)
 
 headers = Split("""
@@ -33,7 +32,6 @@ headers = Split("""
    Plugin_base.h 
    GlobalParamDialog.h 
    Geometry.h 
-   GeometryDialog.h 
    GeometryDataManager.h 
    PortDialog.h 
    ResultPanel.h 
