--- a/VE_Conductor/Network/SConscript
+++ b/VE_Conductor/Network/SConscript
@@ -5,10 +5,10 @@ pj = os.path.join
 Import('baseEnv ves_pkg LIBDIR buildDir xerces_options')
 
 sources = Split("""
-   interface.cpp 
-   package.cpp 
-   string_ops.cpp 
-   GeometryDataBuffer.cpp
+   interface.cxx 
+   package.cxx 
+   string_ops.cxx 
+   GeometryDataBuffer.cxx
 """)
 
 headers = Split("""
