--- a/VE_Xplorer/XplorerHandlers/SConscript
+++ b/VE_Xplorer/XplorerHandlers/SConscript
@@ -63,14 +63,14 @@ sources = Split("""
    CADSetNameEH.cxx
    CADToggleEH.cxx
    CADTransformEH.cxx
-   Device.cpp
-   DeviceHandler.cpp
-   DeviceEventHandler.cpp
+   Device.cxx
+   DeviceHandler.cxx
+   DeviceEventHandler.cxx
    MaterialModeUpdateEH.cxx
    MaterialUpdateEH.cxx
    KeyboardMouse.cxx
    Trackball.cxx
-   TrackballEventHandler.cpp
+   TrackballEventHandler.cxx
    cfdObjectHandler.cxx
    SelectionHandler.cxx
    CreateVisObjectEventHandler.cxx
@@ -97,8 +97,8 @@ sources = Split("""
    AxesLabelsEventHandler.cxx
    DataSetScalarBar.cxx
    ScalarBarEventHandler.cxx
-   ViewEventHandler.cpp
-   DisplayEventHandler.cpp
+   ViewEventHandler.cxx
+   DisplayEventHandler.cxx
 """)
 
 headers = Split("""
